--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jomhuria&family=DM+Sans:opsz,wght@9..40,100;9..40,300&family=Dangrek&family=Delius+Unicase&family=Inter:wght@100;200;300&family=Poppins:wght@200;500;600&family=Roboto:wght@100;300;400&family=Single+Day&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jomhuria&family=DM+Sans:opsz,wght@9..40,100;9..40,300&family=Dangrek&family=Delius+Unicase&family=Inter:wght@100;200;300&family=Poppins:wght@200;300;400;500;600&family=Roboto:wght@100;300;400&family=Single+Day&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
